[gd_scene load_steps=2 format=3 uid="uid://bq2a3hi3xgtbg"]

[ext_resource type="Script" uid="uid://d2xop5b30kg5v" path="res://SCRIPT/UNIRSE_SALA.gd" id="1_jhxum"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jhxum")

[node name="Panel" type="Panel" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="BTN_UNIRSE_SALA" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 415.0
offset_top = 261.0
offset_right = 853.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 60
text = "UNIRSE A SALA"

[node name="BTN_VOLVER" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 528.0
offset_top = 385.0
offset_right = 762.0
offset_bottom = 476.0
theme_override_font_sizes/font_size = 60
text = "VOLVER
"

[node name="LISTA_SALA" type="ItemList" parent="Panel"]
layout_mode = 0
offset_left = 339.0
offset_top = 65.0
offset_right = 962.0
offset_bottom = 247.0
